# GDengine

./: README.md
src/: GDIEngineSource.c
srcTesting/: CMakeLists.txt  CMakeListst.txt  GDIEngine.h  GDIEngineSource.c  GDISprite.h  GDISpriteSource.c  main.c
